--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
     -->
 
     <!-- JAVASCRIPT -->
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
